Fix for that awkward size where sumome takes extra lines, and stick all the floaties behind the nav on mobile

--- a/wp-content/themes/makerfaire/less/panels.less
+++ b/wp-content/themes/makerfaire/less/panels.less
@@ -2,6 +2,9 @@
 	.floatBuyTix {
 		position: fixed;
 		top: 135px;
+		@media screen and (min-width: 768px) and (max-width: 860px) {
+			top: 195px;
+		}
 	}
 }
 
@@ -294,6 +297,9 @@
 			padding-top: 6px;
 			padding-left: 50px;
 			background-size: 236px 45px;
+		}
+		@media screen and (min-width: 768px) and (max-width: 860px) {
+			top: 270px;
 		}
    }
    .featured-maker-panel {
